--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,11 @@
     "nodemailer": "^6.8.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
