--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon server.ts",
+    "start": "NODE_ENV=production node dist/server.js",
+    "start:dev": "nodemon server.ts",
+    "start:prod": "NODE_ENV=production nodemon server.ts",
     "build": "npx tsc",
     "build:start": "yarn build && yarn start"
   },
